[package]
name = "aoc-2023-jmm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = { version = "0.14.3", features = ["rayon"] }
itertools = "0.12.0"
lazy_static = "1.4.0"
rayon = "1.8.0"
regex = "1.10.2"
chrono = "0.4.31"
grid = "0.12.0"
pathfinding = "4.6.0"
winnow = "0.6.20"
terminal_size = "0.4.1"
